overlays/eks/config-server-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
spec:
  template:
    spec:
      containers:
        - name: config-server
