overlays/eks/init-wait-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: petclinic
spec:
  template:
    spec:
