overlays/eks/prefer-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: petclinic
spec:
  template:
    spec:
      containers:
        - name: api-gateway
