overlays/eks/replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: PLACEHOLDER
spec:
  replicas: 6
