overlays/eks/tsc-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: PLACEHOLDER
spec:
  template:
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: PLACEHOLDER
